adicionando página de formação e certificados

--- a/about.html
+++ b/about.html
@@ -13,12 +13,13 @@
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
             <a class="cabecalho__menu__link" href="experience.html">Experiência</a>
+            <a class="cabecalho__menu__link" href="education.html">Formação</a>
         </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__paragrafo">Recém formado em Sistemas de Informação pela UFRA, recentemente trabalhei com consultoria e análise de infraestrutura de T.I., realizando levantamento de requisitos, implementação e implantação de sistemas e suporte ao usuário. Participei nesse período de um projeto de transformação digital na área da saúde com implementação de Prontuário Eletrônico em um município do interior do Pará.  Além de entusiasta de tecnologia e inovação, tenho como hobbies o ciclismo, a musculação e o gaming environment 😄</p>
+            <p class="apresentacao__conteudo__paragrafo">Recém formado em Sistemas de Informação pela UFRA, já trabalhei com consultoria e análise de infraestrutura de T.I., realizando levantamento de requisitos, implementação de sistemas e suporte ao usuário. Participei de um projeto de transformação digital na área da saúde com implementação de um sistema de Prontuário Eletrônico em um município do interior do Pará. Decidi trocar um pouco os ares da minha carreira, e estou estudando desenvolvimento front-end, este portfolio inclusive é o meu primeiro projeto! Além de entusiasta de tecnologia e inovação, tenho como hobbies o ciclismo, a musculação e o gaming environment 😄</p>
         </section>
         <img src="assets/imagem.png" alt="gabriel_avatar">
     </main>
