--- a/experience.html
+++ b/experience.html
@@ -13,6 +13,7 @@
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
             <a class="cabecalho__menu__link" href="experience.html">Experiência</a>
+            <a class="cabecalho__menu__link" href="education.html">Formação</a>
         </nav>
     </header>
     <main class="apresentacao">
