adição de variáveis CSS e outro certificado

--- a/education.html
+++ b/education.html
@@ -31,17 +31,21 @@
             <h2 class="apresentacao__conteudo__titulo">Certificados</h2>
             <p>
                 <ul class="apresentacao__conteudo__paragrafo -pequeno">
+                    <li>HTML e CSS: cabeçalho, footer e variáveis CSS
+                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/ba42318a-f1c1-46f6-8371-96541abf46ba?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
+                    </li>
+                    <br/>
                     <li>
                         HTML e CSS: Classes, posicionamento e Flexbox
-                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/e8fa7383-1acc-43fc-b3da-f1ac80280f85?lang=pt_BR">Certificado</a> | Emissor: Alura
+                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/e8fa7383-1acc-43fc-b3da-f1ac80280f85?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
                     </li>
                     <br/>
                     <li>HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags
-                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/2097d9c3-66d6-4e7c-853a-ae10aaf8705c?lang=pt_BR">Certificado</a> | Emissor : Alura
+                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/2097d9c3-66d6-4e7c-853a-ae10aaf8705c?lang=pt_BR" target="_blank">Certificado</a> | Emissor : Alura
                     </li>
                     <br/>
                     <li>Google Workspace: Deployment Services Specialist
-                        <br/><a class="certificado" href="assets/certificado google.jpg">Certificado</a> | Emissor: Google
+                        <br/><a class="certificado" href="assets/certificado google.jpg" target="_blank">Certificado</a> | Emissor: Google
                     </li>
                 </ul>
             </p>
