troca de valores absolutos para porcentagem CSS

--- a/education.html
+++ b/education.html
@@ -60,7 +60,7 @@
             </p>
 
         </section>
-        <img class="sticky" src="assets/imagem.png" alt="gabriel_avatar">
+        <img class="apresentacao__imagem -sticky" src="assets/imagem.png" alt="gabriel_avatar">
     </main>
     <footer class="rodape">
         <p>There is nothing permanent except change</p>
