--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,7 @@
             <p class="apresentacao__conteudo__paragrafo -pequeno">Durante a vigência, prestava consultoria em tecnologia para a diretoria do órgão junto ao meu supervisor, realizava manutenção da rede e das políticas de acesso do servidor, mantinha o HelpDesk contínuo aos usuários e implementei mediante aprovação da diretoria a atualização do parque tecnológico do mesmo.</p>
             <p class="apresentacao__conteudo__paragrafo -pequeno"><strong>Competências:</strong> Windows Server · Active Directory · Firewall Chackpoint · Suporte Técnico · Manutenção de Hardware</p>
         </section>
-        <img class="sticky" src="assets/imagem.png" alt="gabriel_avatar">
+        <img class="apresentacao__imagem -sticky" src="assets/imagem.png" alt="gabriel_avatar">
     </main>
     <footer class="rodape">
         <p>There is nothing permanent except change</p>
