--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </a>
             </div>
         </section>
-        <img src="assets/imagem.png" alt="gabriel_avatar">
+        <img class="apresentacao__imagem" src="assets/imagem.png" alt="gabriel_avatar">
     </main>
     <footer class="rodape">
         <p>There is nothing permanent except change</p>
