--- a/education.html
+++ b/education.html
@@ -31,6 +31,10 @@
             <h2 class="apresentacao__conteudo__titulo">Certificados</h2>
             <p>
                 <ul class="apresentacao__conteudo__paragrafo -pequeno">
+                    <li>HTML e CSS: trabalhando com responsividade e publicação de projetos
+                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/5a30a6e6-a1b6-41ed-b7bb-0309964f788e?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
+                    </li>
+                    <br/>
                     <li>HTML e CSS: cabeçalho, footer e variáveis CSS
                         <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/ba42318a-f1c1-46f6-8371-96541abf46ba?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
                     </li>
