--- a/education.html
+++ b/education.html
@@ -31,25 +31,35 @@
             <h2 class="apresentacao__conteudo__titulo">Certificados</h2>
             <p>
                 <ul class="apresentacao__conteudo__paragrafo -pequeno">
+                    <li>HTML e CSS: responsividade com mobile-first
+                        <br/>
+                        <a class="certificado" href="https://cursos.alura.com.br/certificate/968f48ff-3304-4c37-bfc5-c15d66753287?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
+                    </li>
+                    <br/>
                     <li>HTML e CSS: trabalhando com responsividade e publicação de projetos
-                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/5a30a6e6-a1b6-41ed-b7bb-0309964f788e?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
+                        <br/>
+                        <a class="certificado" href="https://cursos.alura.com.br/certificate/5a30a6e6-a1b6-41ed-b7bb-0309964f788e?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
                     </li>
                     <br/>
                     <li>HTML e CSS: cabeçalho, footer e variáveis CSS
-                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/ba42318a-f1c1-46f6-8371-96541abf46ba?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
+                        <br/>
+                        <a class="certificado" href="https://cursos.alura.com.br/certificate/ba42318a-f1c1-46f6-8371-96541abf46ba?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
                     </li>
                     <br/>
                     <li>
                         HTML e CSS: Classes, posicionamento e Flexbox
-                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/e8fa7383-1acc-43fc-b3da-f1ac80280f85?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
+                        <br/>
+                        <a class="certificado" href="https://cursos.alura.com.br/certificate/e8fa7383-1acc-43fc-b3da-f1ac80280f85?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
                     </li>
                     <br/>
                     <li>HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags
-                        <br/><a class="certificado" href="https://cursos.alura.com.br/certificate/2097d9c3-66d6-4e7c-853a-ae10aaf8705c?lang=pt_BR" target="_blank">Certificado</a> | Emissor : Alura
+                        <br/>
+                        <a class="certificado" href="https://cursos.alura.com.br/certificate/2097d9c3-66d6-4e7c-853a-ae10aaf8705c?lang=pt_BR" target="_blank">Certificado</a> | Emissor : Alura
                     </li>
                     <br/>
                     <li>Google Workspace: Deployment Services Specialist
-                        <br/><a class="certificado" href="assets/certificado google.jpg" target="_blank">Certificado</a> | Emissor: Google
+                        <br/>
+                        <a class="certificado" href="assets/certificado google.jpg" target="_blank">Certificado</a> | Emissor: Google
                     </li>
                 </ul>
             </p>
