--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Desenvolvedor <strong class="cor-destaque">Front-end</strong></h1>
-            <p class="apresentacao__conteudo__paragrafo">Olá! Sou o Gabriel Raiol, atualmente estou me especializando na área de desenvolvimento front-end, com foco em <strong>JS, React e CSS</strong>.</p>
+            <p class="apresentacao__conteudo__paragrafo">Olá! Sou o Gabriel Raiol, atualmente estou me especializando na área de desenvolvimento front-end, com foco em <strong>JS, Vue e CSS</strong>.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__botoes" href="https://github.com/gabrielraiol" target="_blank">
