changes on font size on responsive screnn and other small fixies ; added JS certificate on education page

--- a/education.html
+++ b/education.html
@@ -19,18 +19,25 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
 
-            <h2 class="apresentacao__conteudo__titulo">Formação acadêmica</h2>
-            <p>
+            <h1 class="apresentacao__conteudo__titulo">Formação acadêmica</h1>
+
                 <ul class="apresentacao__conteudo__paragrafo -pequeno">
-                    <li>Bacharel em Sistemas de Informação<br/><strong>Instituição:</strong> Universidade Federal Rural da Amazônia
-                        <br/>Concluído em 2023
+                    <li>Bacharel em Sistemas de Informação
+                        <br/>
+                        <span class="cor-destaque">Instituição:</span> Universidade Federal Rural da Amazônia
+                        <br/>
+                        Concluído em 2023
                     </li>
                 </ul>
-            </p>
 
-            <h2 class="apresentacao__conteudo__titulo">Certificados</h2>
-            <p>
-                <ul class="apresentacao__conteudo__paragrafo -pequeno">
+            <h1 class="apresentacao__conteudo__titulo">Certificados</h1>
+
+                <ul class="apresentacao__conteudo__paragrafo -pequeno -initial">
+                    <li>JavaScript: programando na linguagem da web
+                        <br/>
+                        <a class="certificado" href="https://cursos.alura.com.br/certificate/94070f19-e016-47b8-a3fb-3024d2c39be0?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
+                    </li>
+                    <br/>
                     <li>HTML e CSS: responsividade com mobile-first
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/968f48ff-3304-4c37-bfc5-c15d66753287?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
@@ -62,16 +69,13 @@
                         <a class="certificado" href="assets/certificado google.jpg" target="_blank">Certificado</a> | Emissor: Google
                     </li>
                 </ul>
-            </p>
 
-            <h2 class="apresentacao__conteudo__titulo">Idiomas</h2>
-            <p>
+            <h1 class="apresentacao__conteudo__titulo">Idiomas</h1>
                 <ul class="apresentacao__conteudo__paragrafo -pequeno">
                     <li>
-                        Português Fluente e Inglês avançado
+                        Inglês avançado
                     </li>
                 </ul>
-            </p>
 
         </section>
         <img class="apresentacao__imagem -sticky" src="assets/imagem.png" alt="gabriel_avatar">
