--- a/experience.html
+++ b/experience.html
@@ -21,29 +21,27 @@
             
             <h1 class="apresentacao__conteudo__titulo">Experiência Profissional</h1>
             <div class="apresentacao__conteudo__experiencia">
-                <h2>Analista de infraestrutura de TI</h2>
+                <h2>Analista de Sistemas</h2>
                 <h3>Órbita Tecnologia</h3>
                 <h3>set de 2021 - dez de 2022</h3>
             </div>
-            <p class="apresentacao__conteudo__paragrafo -pequeno">Responsável pela implementação do sistema de prontuário eletrônico no município de Barcarena-PA, englobando o levantamento de requisitos, configuração do ambiente cloud server e suporte aos usuários. Responsável pelo processo de transformação digital no mesmo município na Secretaria de Receita, implementando um portal de serviços que disponibiliza os serviços de forma online, anteriormente manuais e presenciais, ao mesmo tempo gerenciando a equipe de desenvolvimento a respeito das demandas solicitadas pelo cliente, onde haviam reuniões semanais para definir a melhor maneira de implementar as tarefas. Dentre as tecnologias utilizadas, o portal web possuía integrações de API com o chatbot Google DialogFlow, Pipefy para gerenciamento de abertura de solicitações e Google Firebase para controle de Banco de Dados dos usuários cadastrados. Ao final, foi gerado um dashboard com informações disponíveis à gestão do município para melhor tomada de decisão, como: Serviços mais solicitados, quantidade de usuários cadastrados, horários de pico, entre outras informações.</p>
+            <p class="apresentacao__conteudo__paragrafo -pequeno -initial">Responsável pela implementação do sistema de prontuário eletrônico no município de Barcarena-PA, englobando o levantamento de requisitos, configuração do ambiente cloud server e suporte aos usuários. Responsável pelo processo de transformação digital no mesmo município na Secretaria de Receita, implementando um portal de serviços que disponibiliza os serviços de forma online, anteriormente manuais e presenciais, ao mesmo tempo gerenciando a equipe de desenvolvimento a respeito das demandas solicitadas pelo cliente, onde haviam reuniões semanais para definir a melhor maneira de implementar as tarefas. Dentre as tecnologias utilizadas, o portal web possuía integrações de API com o chatbot Google DialogFlow, Pipefy para gerenciamento de abertura de solicitações e Google Firebase para controle de Banco de Dados dos usuários cadastrados. Ao final, foi gerado um dashboard com informações disponíveis à gestão do município para melhor tomada de decisão, como: Serviços mais solicitados, quantidade de usuários cadastrados, horários de pico, entre outras informações.</p>
             <p class="apresentacao__conteudo__paragrafo -pequeno"><strong>Competências:</strong> Google Workspace · Google Cloud Platform (GCP) · Google Firebase · Cloud · Metodologia Ágil · Windows Server · Linux Server · Consultoria em tecnologia · Suporte técnico</p>
-            <br/>
 
             <div class="apresentacao__conteudo__experiencia">
                 <h2>Estagiário de TI</h2>
                 <h3>RR Refrigeração</h3>
                 <h3>ago de 2019 - fev de 2021</h3>
             </div>
-            <p class="apresentacao__conteudo__paragrafo -pequeno">Exercia manutenção e suporte à rotina de T.I e prestava suporte aos usuários da empresa em nível N1 e N2 aplicando SLA, bem como atendimentos no sistema de gerenciamento ERP contratado pela empresa. No período da pandemia, foi necessário configurar o acesso com VPN nos notebooks que seriam usados no trabalho remoto, para que os mesmos continuassem acessando o sistema ERP da empresa, e realizar monitoramento da rede e recursos das máquinas em uso.</p>
+            <p class="apresentacao__conteudo__paragrafo -pequeno -initial">Exercia manutenção e suporte à rotina de T.I e prestava suporte aos usuários da empresa em nível N1 e N2 aplicando SLA, bem como atendimentos no sistema de gerenciamento ERP contratado pela empresa. No período da pandemia, foi necessário configurar o acesso com VPN nos notebooks que seriam usados no trabalho remoto, para que os mesmos continuassem acessando o sistema ERP da empresa, e realizar monitoramento da rede e recursos das máquinas em uso.</p>
             <p class="apresentacao__conteudo__paragrafo -pequeno"><strong>Competências:</strong> TCP · Windows Server · Active Directory · Suporte Técnico · Manutenção de Hardware</p>
-            <br/>
 
             <div class="apresentacao__conteudo__experiencia">
                 <h2>Estagiário de TI</h2>
                 <h3>CRECI 12ª Região PA/AP</h3>
                 <h3>mai de 2017 - mar de 2019</h3>
             </div>
-            <p class="apresentacao__conteudo__paragrafo -pequeno">Durante a vigência, prestava consultoria em tecnologia para a diretoria do órgão junto ao meu supervisor, realizava manutenção da rede e das políticas de acesso do servidor, mantinha o HelpDesk contínuo aos usuários e implementei mediante aprovação da diretoria a atualização do parque tecnológico do mesmo.</p>
+            <p class="apresentacao__conteudo__paragrafo -pequeno -initial">Durante a vigência, prestava consultoria em tecnologia para a diretoria do órgão junto ao meu supervisor, realizava manutenção da rede e das políticas de acesso do servidor, mantinha o HelpDesk contínuo aos usuários e implementei mediante aprovação da diretoria a atualização do parque tecnológico do mesmo.</p>
             <p class="apresentacao__conteudo__paragrafo -pequeno"><strong>Competências:</strong> Windows Server · Active Directory · Firewall Chackpoint · Suporte Técnico · Manutenção de Hardware</p>
         </section>
         <img class="apresentacao__imagem -sticky" src="assets/imagem.png" alt="gabriel_avatar">
