adding the changing language feature (in progress) ; adding JS certificate

--- a/education.html
+++ b/education.html
@@ -33,6 +33,11 @@
             <h1 class="apresentacao__conteudo__titulo">Certificados</h1>
 
                 <ul class="apresentacao__conteudo__paragrafo -pequeno -initial">
+                    <li>JavaScript para Web: Crie páginas dinâmicas
+                        <br/>
+                        <a class="certificado" href="https://cursos.alura.com.br/certificate/c9fbbc9c-126d-48c8-9f1a-ae61cdcb5991?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
+                    </li>
+                    <br/>
                     <li>JavaScript: programando na linguagem da web
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/94070f19-e016-47b8-a3fb-3024d2c39be0?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
