--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <a class="cabecalho__menu__link" href="education.html">Formação</a>
         </nav>
     </header>
+    <!-- <div class="botoes_idioma">
+        <button class="botao_idioma" id="pt-BR_button"><img src="assets/br-flag.svg" alt="pt-BR"></button>
+        <button class="botao_idioma" id="en-US_button"><img src="assets/us-flag.svg" alt="en-US"></button>
+    </div> -->
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo -center">Desenvolvedor <strong class="breakline" class="cor-destaque">Front-end</strong></h1>
@@ -41,5 +45,7 @@
     <footer class="rodape">
         <p>There is nothing permanent except change</p>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
