adding React + TypeScript Certificate

--- a/education.html
+++ b/education.html
@@ -33,6 +33,11 @@
             <h1 class="apresentacao__conteudo__titulo">Certificados</h1>
 
                 <ul class="apresentacao__conteudo__paragrafo -pequeno -initial">
+                    <li>React: escrevendo com Typescript
+                        <br/>
+                        <a class="certificado" href="https://cursos.alura.com.br/certificate/9016327f-639c-437e-8d32-7a97e2f10817?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
+                    </li>
+                    <br/>
                     <li>JavaScript para Web: Crie páginas dinâmicas
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/c9fbbc9c-126d-48c8-9f1a-ae61cdcb5991?lang=pt_BR" target="_blank">Certificado</a> | Emissor: Alura
