fixing come text positions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo -center">Desenvolvedor <strong class="breakline" class="cor-destaque">Front-end</strong></h1>
-            <p class="apresentacao__conteudo__paragrafo">Olá! Sou o Gabriel Raiol, atualmente estou me especializando em desenvolvimento front-end, construindo projetos em <span class="cor-destaque">JavaScript</span>.</p>
+            <p class="apresentacao__conteudo__paragrafo -center">Olá! Sou o Gabriel Raiol, atualmente estou me especializando em desenvolvimento front-end, construindo projetos em <span class="cor-destaque">React com TypeScript</span>.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__botoes" href="https://github.com/gabrielraiol" target="_blank">
