working on changing language feature

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header class="cabecalho">
         
         <nav class="cabecalho__menu -desktop">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="experience.html">Experiência</a>
-            <a class="cabecalho__menu__link" href="education.html">Formação</a>
+            <a class="cabecalho__menu__link" id="dl1" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" id="dl2" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" id="dl3" href="experience.html">Experiência</a>
+            <a class="cabecalho__menu__link" id="dl4" href="education.html">Formação</a>
         </nav>
 
         <div class="cabecalho__menu -mobile">
@@ -24,10 +24,10 @@
                 <span class="bar bar3"></span>
             </button>
             <nav class="cabecalho__menu__mobile-links">
-                <a class="cabecalho__menu__link" href="index.html">Home</a>
-                <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-                <a class="cabecalho__menu__link" href="experience.html">Experiência</a>
-                <a class="cabecalho__menu__link" href="education.html">Formação</a>
+                <a class="cabecalho__menu__link" id="ml1" href="index.html">Home</a>
+                <a class="cabecalho__menu__link" id="ml2" href="about.html">Sobre mim</a>
+                <a class="cabecalho__menu__link" id="ml3" href="experience.html">Experiência</a>
+                <a class="cabecalho__menu__link" id="ml4" href="education.html">Formação</a>
             </nav>
         </div>
     </header>
