adding translation feature, by adding ID's on elements associating then with JSON pt-BR and en-US files; saving the user language preference on localstorage

--- a/education.html
+++ b/education.html
@@ -11,10 +11,10 @@
     <header class="cabecalho">
         
         <nav class="cabecalho__menu -desktop">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="experience.html">Experiência</a>
-            <a class="cabecalho__menu__link" href="education.html">Formação</a>
+            <a class="cabecalho__menu__link" id="dl1" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" id="dl2" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" id="dl3" href="experience.html">Experiência</a>
+            <a class="cabecalho__menu__link" id="dl4" href="education.html">Formação</a>
         </nav>
 
         <div class="cabecalho__menu -mobile">
@@ -24,19 +24,23 @@
                 <span class="bar bar3"></span>
             </button>
             <nav class="cabecalho__menu__mobile-links">
-                <a class="cabecalho__menu__link" href="index.html">Home</a>
-                <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-                <a class="cabecalho__menu__link" href="experience.html">Experiência</a>
-                <a class="cabecalho__menu__link" href="education.html">Formação</a>
+                <a class="cabecalho__menu__link" id="ml1" href="index.html">Home</a>
+                <a class="cabecalho__menu__link" id="ml2" href="about.html">Sobre mim</a>
+                <a class="cabecalho__menu__link" id="ml3" href="experience.html">Experiência</a>
+                <a class="cabecalho__menu__link" id="ml4" href="education.html">Formação</a>
             </nav>
         </div>
     </header>
+    <div class="botoes_idioma">
+        <button class="botao_idioma" id="pt-BR_button"><img src="assets/br-flag.svg" alt="pt-BR"></button>
+        <button class="botao_idioma" id="en-US_button"><img src="assets/us-flag.svg" alt="en-US"></button>
+    </div>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
 
-            <h1 class="apresentacao__conteudo__titulo">Formação acadêmica</h1>
+            <h1 id="edu-academic" class="apresentacao__conteudo__titulo">Formação acadêmica</h1>
 
-                <ul class="apresentacao__conteudo__paragrafo -pequeno">
+                <ul id="edu-academic-info" class="apresentacao__conteudo__paragrafo -pequeno">
                     <li>Bacharel em Sistemas de Informação
                         <br/>
                         <span class="cor-destaque">Instituição:</span> <span class="emissor">Universidade Federal Rural da Amazônia</span>
