--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
     <header class="cabecalho">
         
         <nav class="cabecalho__menu -desktop">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="experience.html">Experiência</a>
-            <a class="cabecalho__menu__link" href="education.html">Formação</a>
+            <a class="cabecalho__menu__link" id="dl1" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" id="dl2" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" id="dl3" href="experience.html">Experiência</a>
+            <a class="cabecalho__menu__link" id="dl4" href="education.html">Formação</a>
         </nav>
 
         <div class="cabecalho__menu -mobile">
@@ -24,17 +24,21 @@
                 <span class="bar bar3"></span>
             </button>
             <nav class="cabecalho__menu__mobile-links">
-                <a class="cabecalho__menu__link" href="index.html">Home</a>
-                <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
-                <a class="cabecalho__menu__link" href="experience.html">Experiência</a>
-                <a class="cabecalho__menu__link" href="education.html">Formação</a>
+                <a class="cabecalho__menu__link" id="ml1" href="index.html">Home</a>
+                <a class="cabecalho__menu__link" id="ml2" href="about.html">Sobre mim</a>
+                <a class="cabecalho__menu__link" id="ml3" href="experience.html">Experiência</a>
+                <a class="cabecalho__menu__link" id="ml4" href="education.html">Formação</a>
             </nav>
         </div>
     </header>
+    <div class="botoes_idioma">
+        <button class="botao_idioma" id="pt-BR_button"><img src="assets/br-flag.svg" alt="pt-BR"></button>
+        <button class="botao_idioma" id="en-US_button"><img src="assets/us-flag.svg" alt="en-US"></button>
+    </div>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo -center">Sobre mim</h1>
-            <p class="apresentacao__conteudo__paragrafo -center">Formado em Sistemas de Informação pela UFRA, já trabalhei com consultoria e análise de infraestrutura de T.I., realizando levantamento de requisitos, implementação de sistemas e suporte ao usuário. Participei de um projeto de transformação digital na área da saúde pública em um município do interior do Pará, implementando um sistema de Prontuário Eletrônico. Decidi trocar um pouco os ares da minha carreira, e estou estudando <span class="cor-destaque">desenvolvimento front-end</span>, este portfolio inclusive foi o meu primeiro projeto! Além de entusiasta de tecnologia e inovação, tenho como hobbies o ciclismo, a musculação e o gaming environment 😄</p>
+            <h1 id="about-title" class="apresentacao__conteudo__titulo -center">Sobre mim</h1>
+            <p id="about-content" class="apresentacao__conteudo__paragrafo -center">Formado em Sistemas de Informação pela UFRA, já trabalhei com consultoria e análise de infraestrutura de T.I., realizando levantamento de requisitos, implementação de sistemas e suporte ao usuário. Participei de um projeto de transformação digital na área da saúde pública em um município do interior do Pará, implementando um sistema de Prontuário Eletrônico. Decidi trocar um pouco os ares da minha carreira, e estou estudando <span class="cor-destaque">desenvolvimento front-end</span>, este portfolio inclusive foi o meu primeiro projeto! Além de entusiasta de tecnologia e inovação, tenho como hobbies o ciclismo, a musculação e o gaming environment 😄</p>
         </section>
         <img class="apresentacao__imagem" src="assets/imagem.png" alt="gabriel_avatar">
     </main>
