--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             </nav>
         </div>
     </header>
-    <!-- <div class="botoes_idioma">
+    <div class="botoes_idioma">
         <button class="botao_idioma" id="pt-BR_button"><img src="assets/br-flag.svg" alt="pt-BR"></button>
         <button class="botao_idioma" id="en-US_button"><img src="assets/us-flag.svg" alt="en-US"></button>
-    </div> -->
+    </div>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo -center">Desenvolvedor <strong class="breakline" class="cor-destaque">Front-end</strong></h1>
-            <p class="apresentacao__conteudo__paragrafo -center">Olá! Sou o Gabriel Raiol, atualmente estou me especializando em desenvolvimento front-end, construindo projetos em <span class="cor-destaque">React com TypeScript</span>.</p>
+            <h1 id="home-title" class="apresentacao__conteudo__titulo -center">Desenvolvedor <strong class="breakline" class="cor-destaque">Front-end</strong></h1>
+            <p id="home-content" class="apresentacao__conteudo__paragrafo -center">Olá! Sou o Gabriel Raiol, atualmente estou me especializando em desenvolvimento front-end, construindo projetos em <span class="cor-destaque">React com TypeScript</span>.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__botoes" href="https://github.com/gabrielraiol" target="_blank">
