finishing the JSON translation files

--- a/education.html
+++ b/education.html
@@ -49,62 +49,62 @@
                     </li>
                 </ul>
 
-            <h1 class="apresentacao__conteudo__titulo">Certificados</h1>
+            <h1 id="edu-certificates" class="apresentacao__conteudo__titulo">Certificados</h1>
 
                 <ul class="apresentacao__conteudo__paragrafo -pequeno -initial">
-                    <li>React: escrevendo com Typescript
+                    <li id="edu-certificate-9">React: escrevendo com Typescript
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/9016327f-639c-437e-8d32-7a97e2f10817?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
                     </li>
                     <br/>
-                    <li>JavaScript para Web: Crie páginas dinâmicas
+                    <li id="edu-certificate-8">JavaScript para Web: Crie páginas dinâmicas
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/c9fbbc9c-126d-48c8-9f1a-ae61cdcb5991?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
                     </li>
                     <br/>
-                    <li>JavaScript: programando na linguagem da web
+                    <li id="edu-certificate-7">JavaScript: programando na linguagem da web
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/94070f19-e016-47b8-a3fb-3024d2c39be0?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
                     </li>
                     <br/>
-                    <li>HTML e CSS: responsividade com mobile-first
+                    <li id="edu-certificate-6">HTML e CSS: responsividade com mobile-first
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/968f48ff-3304-4c37-bfc5-c15d66753287?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
                     </li>
                     <br/>
-                    <li>HTML e CSS: trabalhando com responsividade e publicação de projetos
+                    <li id="edu-certificate-5">HTML e CSS: trabalhando com responsividade e publicação de projetos
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/5a30a6e6-a1b6-41ed-b7bb-0309964f788e?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
                     </li>
                     <br/>
-                    <li>HTML e CSS: cabeçalho, footer e variáveis CSS
+                    <li id="edu-certificate-4">HTML e CSS: cabeçalho, footer e variáveis CSS
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/ba42318a-f1c1-46f6-8371-96541abf46ba?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
                     </li>
                     <br/>
-                    <li>
+                    <li id="edu-certificate-3">
                         HTML e CSS: Classes, posicionamento e Flexbox
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/e8fa7383-1acc-43fc-b3da-f1ac80280f85?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
                     </li>
                     <br/>
-                    <li>HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags
+                    <li id="edu-certificate-2">HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags
                         <br/>
                         <a class="certificado" href="https://cursos.alura.com.br/certificate/2097d9c3-66d6-4e7c-853a-ae10aaf8705c?lang=pt_BR" target="_blank">Certificado</a> <span class="emissor">| Emissor: Alura</span>
                     </li>
                     <br/>
-                    <li>Google Workspace: Deployment Services Specialist
+                    <li id="edu-certificate-1">Google Workspace: Deployment Services Specialist
                         <br/>
                         <a class="certificado" href="assets/certificado google.jpg" target="_blank">Certificado</a> <span class="emissor">| Emissor: Google</span>
                     </li>
                 </ul>
 
-            <h1 class="apresentacao__conteudo__titulo">Idiomas</h1>
-                <ul class="apresentacao__conteudo__paragrafo -pequeno">
-                    <li>
-                        Inglês avançado
-                    </li>
-                </ul>
+            <h1 id="edu-language" class="apresentacao__conteudo__titulo">Idiomas</h1>
+            <ul id="edu-language-content" class="apresentacao__conteudo__paragrafo -pequeno">
+                <li>
+                    Inglês avançado
+                </li>
+            </ul>
 
         </section>
         <img class="apresentacao__imagem -sticky" src="assets/imagem.png" alt="gabriel_avatar">
